admission-controller-webhook/deployment/deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: webhook-server-change-request
  namespace: default
  labels:
    app: webhook-server
spec:
  replicas: 1
  selector:
    matchLabels:
      app: webhook-server
  template:
    metadata:
      labels:
        app: webhook-server
    spec:
      containers:
      - name: server
#        image: harbor.middleware.com/shenkonghui/admission-controller-webhook-request:v0.2
        image: 10.10.102.124/shenkonghui/admission-controller-webhook-request:v0.4
        imagePullPolicy: Always
        ports:
        - containerPort: 8443
          name: webhook-api
        volumeMounts:
        - name: webhook-tls-certs
          mountPath: /run/secrets/tls
          readOnly: true
      volumes:
      - name: webhook-tls-certs
        secret:
          secretName: webhook-server-tls
---
apiVersion: v1
kind: Service
metadata:
  name: webhook-server-change-request
  namespace: default
spec:
  selector:
    app: webhook-server
  ports:
    - port: 443
      targetPort: webhook-api
---
apiVersion: admissionregistration.k8s.io/v1beta1
kind: MutatingWebhookConfiguration
metadata:
  name: demo-webhook
webhooks:
  - name: webhook-server-change-request.default.svc
    objectSelector:
      matchLabels:
        foo: bar
    clientConfig:
      service:
        name: webhook-server-change-request
        namespace: default
        path: "/mutate"
      caBundle: LS0tLS1CRUdJTiBDRVJUSUZJQ0FURS0tLS0tCk1JSURtRENDQW9DZ0F3SUJBZ0lVWXIvL2tSVFVkMDZocmhzMXk2RlRRTS9aU3RRd0RRWUpLb1pJaHZjTkFRRUwKQlFBd1h6RUxNQWtHQTFVRUJoTUNRMDR4RVRBUEJnTlZCQWdNQ0Zwb1pVcHBZVzVuTVJFd0R3WURWUVFIREFoSQpZVzVuV21odmRURUxNQWtHQTFVRUNnd0NTRU14RERBS0JnTlZCQXNNQTBSbGRqRVBNQTBHQTFVRUF3d0dZMkV1ClkyOXRNQjRYRFRJeU1EWXpNREF6TkRBeU4xb1hEVEl6TURZek1EQXpOREF5TjFvd1h6RUxNQWtHQTFVRUJoTUMKUTA0eEVUQVBCZ05WQkFnTUNGcG9aVXBwWVc1bk1SRXdEd1lEVlFRSERBaElZVzVuV21odmRURUxNQWtHQTFVRQpDZ3dDU0VNeERE [...]
    rules:
      - operations: [ "CREATE","UPDATE"]
        apiGroups: [""]
        apiVersions: ["v1"]
        resources: ["pods"]
