admission-controller-webhook/deployment/mutatingWebhookConfiguration.yaml
apiVersion: admissionregistration.k8s.io/v1beta1
kind: MutatingWebhookConfiguration
metadata:
  name: demo-webhook
webhooks:
  - name: webhook-server.webhook-demo.svc
    clientConfig:
      url: "https://10.10.136.50:8443/mutate"
#      service:
#        name: webhook-server
#        namespace: webhook-demo
#        path: "/mutate"
#      caBundle: ${CA_PEM_B64}
      caBundle: LS0tLS1CRUdJTiBDRVJUSUZJQ0FURS0tLS0tCk1JSURtRENDQW9DZ0F3SUJBZ0lVZXgrYTRwRTR2L1VxTk9uN3IxTFhib0pXVmZjd0RRWUpLb1pJaHZjTkFRRUwKQlFBd1h6RUxNQWtHQTFVRUJoTUNRMDR4RVRBUEJnTlZCQWdNQ0Zwb1pVcHBZVzVuTVJFd0R3WURWUVFIREFoSQpZVzVuV21odmRURUxNQWtHQTFVRUNnd0NTRU14RERBS0JnTlZCQXNNQTBSbGRqRVBNQTBHQTFVRUF3d0dZMkV1ClkyOXRNQjRYRFRJeU1EWXpNREEyTkRjME5sb1hEVEl6TURZek1EQTJORGMwTmxvd1h6RUxNQWtHQTFVRUJoTUMKUTA0eEVUQVBCZ05WQkFnTUNGcG9aVXBwWVc1bk1SRXdEd1lEVlFRSERBaElZVzVuV21odmRURUxNQWtHQTFVRQpDZ3dDU0VNeERE [...]
    rules:
      - operations: [ "CREATE","UPDATE" ]
        apiGroups: [""]
        apiVersions: ["v1"]
        resources: ["pods"]
